src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Accounting_Notes__c</fullName>
        <description>This field gives Accounting the ability to create a note on the member account that will display in the restaurant POS</description>
        <inlineHelpText>Accounting should use this field to set a note on the Member&apos;s account for other users to see.</inlineHelpText>
        <label>Accounting Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Aging_Effective_Date__c</fullName>
        <description>to store the effective date for Aging - vendor specific field</description>
        <label>Aging Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Terms__c</fullName>
        <description>Field for Vendor RecordType</description>
        <label>Billing Terms</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Net 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOM (End of Month)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 MFI (15th of Month Following Invoice date)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upon Receipt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cert_of_Liability_Expiration_Date__c</fullName>
        <description>field for vendor recordtype</description>
        <inlineHelpText>Certification of Liability Expiration Date</inlineHelpText>
        <label>Cert. of Liability Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certi_of_Liability_Insurance_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>field for vendor recordtype</description>
        <inlineHelpText>Certificate of Liability Insurance Received</inlineHelpText>
        <label>Certi. of Liability Insurance Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>used to store financial account on vendor invoice lines for the current vendor</description>
        <inlineHelpText>Financial Account for vendor invoice lines</inlineHelpText>
        <label>Default Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Financial_Account__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Federal_ID__c</fullName>
        <description>field for vendor recordtype</description>
        <label>Federal ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Name__c</fullName>
        <inlineHelpText>This should be a unique name that identifies the household. The format should include the family&apos;s member Id and should be formatted like this: Johnson - 1234</inlineHelpText>
        <label>Household Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Billing_Contact__c</fullName>
        <label>Main Billing Contact</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Category__c</fullName>
        <description>field for vendor recordtype</description>
        <label>Purchase Category</label>
        <picklist>
            <picklistValues>
                <fullName>Category 1</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Balance__c</fullName>
        <description>to store total balance on the vendor - vendor specific field</description>
        <formula>X0_30__c  +  X31_60__c  +  X61_90__c  +  X91__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>W_9_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>W-9 Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X0_30__c</fullName>
        <label>0-30</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1099_Form__c</fullName>
        <label>1099 Form</label>
        <picklist>
            <picklistValues>
                <fullName>1099-C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1099-DIV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1099-INT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1099-MISC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1099-S</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X1099_Type__c</fullName>
        <description>field for vendor recordtype</description>
        <label>1099 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X1099_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>field for vendor recordtype</description>
        <label>1099 Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X31_60__c</fullName>
        <description>to store 2nd month prior dues - vendor specific</description>
        <label>31-60</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X61_90__c</fullName>
        <description>stores 3rd moth prior dues on the vendor - vendor specific</description>
        <label>61-90</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X91__c</fullName>
        <label>91+</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <recordTypes>
        <fullName>Guest</fullName>
        <active>true</active>
        <description>Select this record type for guest accounts.</description>
        <label>Guest</label>
    </recordTypes>
    <recordTypes>
        <fullName>Home_Club</fullName>
        <active>true</active>
        <description>Select this record type for your club.</description>
        <label>Home Club</label>
    </recordTypes>
    <recordTypes>
        <fullName>Household</fullName>
        <active>true</active>
        <description>Select this record type for member accounts.</description>
        <label>Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reciprocal_Club</fullName>
        <active>true</active>
        <description>Select this record type for reciprocal clubs.</description>
        <label>Reciprocal Club</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor</fullName>
        <active>true</active>
        <description>Select this record type to create a vendor.</description>
        <label>Vendor</label>
    </recordTypes>
</CustomObject>